# pearlclaw

./: .gitignore  README.md
.github/workflows/: port-ci.yml
benches/results/: baseline-rust-2026-04-30.json  baseline-zig-2026-05-02.json  baseline-zig-after-arena-reuse.json  baseline-zig-after-json-arena.json  baseline-zig-after-stmt-cache.json
benches/results/reports/: 2026-05-02-after-json-arena.md  2026-05-02-after-stmt-cache.md  2026-05-02-comparison.md  2026-05-05-after-arena-reuse.md
benches/runner/: compare.py  run_rust.sh  run_zig.sh
docs/: decisions.md  porting-notes.md
docs/memory-pilot/: notes.md  rust-outline.txt
docs/parser-pilot/: rust-outline.txt
eval-tools/: Cargo.toml
evals/driver/: extract_fixtures.py  run_evals.py
evals/fixtures/parser/: 001-parse_tool_calls_extracts_multiple_calls.input.txt  002-parse_tool_calls_returns_text_only_when_no_calls.expected.json  002-parse_tool_calls_returns_text_only_when_no_calls.input.txt  003-parse_tool_calls_handles_malformed_json.expected.json  003-parse_tool_calls_handles_malformed_json.input.txt  004-parse_tool_calls_text_before_and_after.expected.json  004-parse_tool_calls_text_before_and_after.input.txt  005-parse_tool_calls_handles_openai_format.expected.json  005-parse_tool_calls_handles_openai_format.input.txt  006-parse_tool_calls_handles_openai_format_multiple_calls.expected.json  006-parse_tool_calls_handles_openai_format_multiple_calls.input.txt  007-parse_tool_calls_openai_format_without_content.expected.json  007-parse_tool_calls_openai_format_without_content.input.txt  008-parse_tool_calls_preserves_openai_tool_call_ids.expected.json  008-parse_tool_calls_preserves_openai_tool_call_ids.input.txt  009-parse_tool_calls_handles_markdown_json_inside_tool_call_tag.expected.json  009-parse_tool_calls_handles_markdown_json_inside_tool_call_tag.input.txt  010-parse_tool_calls_handles_noisy_tool_call_tag_body.input.txt  011-parse_tool_calls_handles_tool_call_inline_attributes_with_send_message_alias.expected.json  011-parse_tool_calls_handles_tool_call_inline_attributes_with_send_message_alias.input.txt  012-parse_tool_calls_handles_tool_call_function_style_arguments.expected.json  012-parse_tool_calls_handles_tool_call_function_style_arguments.input.txt  013-parse_tool_calls_handles_xml_nested_tool_payload.expected.json  013-parse_tool_calls_handles_xml_nested_tool_payload.input.txt  014-parse_tool_calls_ignores_xml_thinking_wrapper.expected.json  014-parse_tool_calls_ignores_xml_thinking_wrapper.input.txt  015-parse_tool_calls_handles_xml_with_json_arguments.expected.json  015-parse_tool_calls_handles_xml_with_json_arguments.input.txt  016-parse_tool_calls_handles_markdown_tool_call_fence.expected.json  016-parse_tool_calls_handles_markdown_tool_call_fence.input.txt  017-parse_tool_calls_handles_markdown_tool_call_hybrid_close_tag.expected.json  017-parse_tool_calls_handles_markdown_tool_call_hybrid_close_tag.input.txt  018-parse_tool_calls_handles_markdown_invoke_fence.expected.json  018-parse_tool_calls_handles_markdown_invoke_fence.input.txt  019-parse_tool_calls_handles_tool_name_fence_format.expected.json  019-parse_tool_calls_handles_tool_name_fence_format.input.txt  020-parse_tool_calls_handles_tool_name_fence_shell.input.txt  021-parse_tool_calls_handles_multiple_tool_name_fences.expected.json  021-parse_tool_calls_handles_multiple_tool_name_fences.input.txt  022-parse_tool_calls_handles_toolcall_tag_alias.input.txt  (+117 more)
zig/: build.zig  build.zig.zon
zig/bench/: agent_benchmarks.zig
zig/src/: root.zig
zig/src/agent_tools/: calculator.zig  cli_discovery.zig  content_search.zig  data_management.zig  file_edit.zig  file_write.zig  fs_common.zig  glob_search.zig  hardware_board_info.zig  image_info.zig  (+13 more)
(+512 files in other folders)
