[package]
name = "eval-tools"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "eval-parser"
path = "src/bin/eval-parser.rs"

[[bin]]
name = "eval-memory"
path = "src/bin/eval-memory.rs"

[[bin]]
name = "eval-dispatcher"
path = "src/bin/eval-dispatcher.rs"

[[bin]]
name = "eval-providers"
path = "src/bin/eval-providers.rs"

[[bin]]
name = "eval-oauth"
path = "src/bin/eval-oauth.rs"

[[bin]]
name = "eval-schema"
path = "src/bin/eval-schema.rs"

[[bin]]
name = "eval-secrets"
path = "src/bin/eval-secrets.rs"

[[bin]]
name = "eval-profiles"
path = "src/bin/eval-profiles.rs"

[[bin]]
name = "eval-multimodal"
path = "src/bin/eval-multimodal.rs"

[dependencies]
zeroclaw-api = { path = "../rust/crates/zeroclaw-api" }
zeroclaw-config = { path = "../rust/crates/zeroclaw-config" }
zeroclaw-tool-call-parser = { path = "../rust/crates/zeroclaw-tool-call-parser" }
zeroclaw-memory = { path = "../rust/crates/zeroclaw-memory" }
zeroclaw-providers = { path = "../rust/crates/zeroclaw-providers" }
zeroclaw-runtime = { path = "../rust/crates/zeroclaw-runtime" }
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.50", default-features = false, features = ["rt", "macros"] }
