[package]
name = "eval-tools"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "eval-parser"
path = "src/bin/eval-parser.rs"

[[bin]]
name = "eval-memory"
path = "src/bin/eval-memory.rs"

[[bin]]
name = "eval-dispatcher"
path = "src/bin/eval-dispatcher.rs"

[[bin]]
name = "eval-providers"
path = "src/bin/eval-providers.rs"

[[bin]]
name = "eval-oauth"
path = "src/bin/eval-oauth.rs"

[[bin]]
name = "eval-schema"
path = "src/bin/eval-schema.rs"

[[bin]]
name = "eval-secrets"
path = "src/bin/eval-secrets.rs"

[[bin]]
name = "eval-profiles"
path = "src/bin/eval-profiles.rs"

[[bin]]
name = "eval-multimodal"
path = "src/bin/eval-multimodal.rs"

[[bin]]
name = "eval-provider-types"
path = "src/bin/eval-provider-types.rs"

[[bin]]
name = "eval-provider-secrets"
path = "src/bin/eval-provider-secrets.rs"

[[bin]]
name = "eval-provider-factory"
path = "src/bin/eval-provider-factory.rs"

[[bin]]
name = "eval-agent-tools"
path = "src/bin/eval-agent-tools.rs"

[[bin]]
name = "eval-memory-tools"
path = "src/bin/eval-memory-tools.rs"

[[bin]]
name = "eval-file-tools"
path = "src/bin/eval-file-tools.rs"

[[bin]]
name = "eval-content-search"
path = "src/bin/eval-content-search.rs"

[[bin]]
name = "eval-data-management"
path = "src/bin/eval-data-management.rs"

[[bin]]
name = "eval-image-info"
path = "src/bin/eval-image-info.rs"

[[bin]]
name = "eval-cli-discovery"
path = "src/bin/eval-cli-discovery.rs"

[[bin]]
name = "eval-hardware-memory-map"
path = "src/bin/eval-hardware-memory-map.rs"

[[bin]]
name = "eval-hardware-board-info"
path = "src/bin/eval-hardware-board-info.rs"

[[bin]]
name = "eval-report-template"
path = "src/bin/eval-report-template.rs"

[dependencies]
zeroclaw-api = { path = "../rust/crates/zeroclaw-api" }
zeroclaw-config = { path = "../rust/crates/zeroclaw-config" }
zeroclaw-tool-call-parser = { path = "../rust/crates/zeroclaw-tool-call-parser" }
zeroclaw-memory = { path = "../rust/crates/zeroclaw-memory" }
zeroclaw-providers = { path = "../rust/crates/zeroclaw-providers" }
zeroclaw-runtime = { path = "../rust/crates/zeroclaw-runtime" }
zeroclaw-tools = { path = "../rust/crates/zeroclaw-tools", default-features = false }
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
filetime = "0.2"
serde_json = "1.0"
tokio = { version = "1.50", default-features = false, features = ["rt", "macros"] }
